--- a/css/styles.css
+++ b/css/styles.css
@@ -309,4 +309,8 @@ footer {
     .btn-yellow {
         font-size: 12px;
     }
+    .slider-card {
+        flex: 0 0 100%; 
+        max-width: 100%;
+    }
 }
